# dosu

./: Cargo.toml  README.md  install
src/: config.rs  error.rs  lib.rs  main.rs
tests/: config.rs
tests/configs/: cmd_doas.conf  options_doas.conf  simple_doas.conf  target_doas.conf
