[package]
name = "dosu"
version = "0.0.2"
edition = "2018"
categories = ["authentication", "command-line-utilities"]
description = "Rust port of OpenBSD's doas"
keywords = ["bsd", "auth", "doas", "sudo"]
license = "BSD-2-Clause"
authors = ["orvi"]
repository = "https://github.com/orvij/dosu"

[dependencies]
libc = "0.2.98"
nix = "0.21.0"
nom = "6.2.1"
bsd_auth = "0.3.1"
login_cap = "0.0.2"
readpassphrase = "0.2.0"
